Bug Fixes and Improvements from crashes